Feature7 completed, added style for female users displaying information

--- a/React/reactpeople/src/Components/User card/userCard.css
+++ b/React/reactpeople/src/Components/User card/userCard.css
@@ -37,6 +37,10 @@
     margin-right: 15px;
 }
 
+.female {
+    background-color: #ffebee;
+}
+
 @media screen and (min-width:1400px) and (max-width:6000px) {
     .cardBorder {
         width: 20%;
